exercise 1.10/mainapp/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-svc
          servicePort: 2345
